--- a/library.properties
+++ b/library.properties
@@ -3,7 +3,7 @@ version=1.0b
 author=ChipCE
 maintainer=ChipCE
 sentence=OTA web updater for esp8266 
-paragraph=Based on ESP8266HTTPUpdateServer but have the ability to custom web UI.Required library for WiFiMan
+paragraph=Based on ESP8266HTTPUpdateServer but have the ability to custom web UI.
 category=Communication
-url=https://github.com/ChipTechno/ESP8266-MQTT-ready-firmware
+url=https://github.com/ChipTechno/ESP8266OTA
 architectures=*
