--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=ESP8266OTA
-version=1.0b
-author=ChipCE
-maintainer=ChipCE
+version=1.0
+author=ChipCE,chip.techno.service@gmail.com
+maintainer=ChipCE,chip.techno.service@gmail.com
 sentence=OTA web updater for esp8266 
-paragraph=Based on ESP8266HTTPUpdateServer with customizable web UI
+paragraph=Based on ESP8266HTTPUpdateServer with customizable web UI.Optimized for both mobile and pc display
 category=Communication
 url=https://github.com/ChipTechno/ESP8266OTA
 architectures=*
