--- a/library.properties
+++ b/library.properties
@@ -7,3 +7,4 @@ paragraph=Based on ESP8266HTTPUpdateServer with customizable web UI.Optimized fo
 category=Communication
 url=https://github.com/ChipTechno/ESP8266OTA
 architectures=*
+includes=ESP8266OTA.h
