--- a/library.properties
+++ b/library.properties
@@ -6,5 +6,5 @@ sentence=OTA web updater for esp8266
 paragraph=Based on ESP8266HTTPUpdateServer with customizable web UI.Optimized for both mobile and pc display
 category=Communication
 url=https://github.com/ChipTechno/ESP8266OTA
-architectures=*
+architectures=esp8266
 includes=ESP8266OTA.h
